--- a/Mobile/CR2/res/layout/soldier_layout.xml
+++ b/Mobile/CR2/res/layout/soldier_layout.xml
@@ -112,4 +112,88 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#ffffff" />
 
+    <EditText
+        android:id="@+id/lastName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/lastNameLabel"
+        android:layout_below="@+id/lastNameLabel"
+        android:background="#ffffffff"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/firstName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/firstNameLabel"
+        android:layout_toLeftOf="@+id/lastNameLabel"
+        android:background="#ffffffff"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <EditText
+        android:id="@+id/birthdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/birthdateLabel"
+        android:layout_below="@+id/birthdateLabel"
+        android:background="#ffffffff"
+        android:ems="10"
+        android:inputType="date" />
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/birthdate"
+        android:layout_alignBottom="@+id/birthdate"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/lastNameLabel"
+        android:background="#ffffffff"
+        android:ems="10"
+        android:inputType="textEmailAddress" />
+
+    <EditText
+        android:id="@+id/branch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/militaryBranchLabel"
+        android:layout_toLeftOf="@+id/lastNameLabel"
+        android:background="#ffffffff"
+        android:ems="10" >
+
+    </EditText>
+
+    <EditText
+        android:id="@+id/rank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/rankLabel"
+        android:layout_alignTop="@+id/branch"
+        android:background="#ffffffff"
+        android:ems="10" >
+
+    </EditText>
+
+    <EditText
+        android:id="@+id/numberOfTroops"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignRight="@+id/branch"
+        android:layout_below="@+id/noOfTroops"
+        android:background="#ffffffff"
+        android:ems="10" />
+
+    <EditText
+        android:id="@+id/deployedMailingAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/deployAddr"
+        android:background="#ffffffff"
+        android:ems="10" />
+
 </RelativeLayout>
